fixed horizontal scroll

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,12 @@
     box-sizing: border-box;
     padding:0px;
     margin:0px;
+    
 }
+body{
+    overflow-x: hidden !important;
+}
+
 
 @import url('https://fonts.googleapis.com/css2?family=Hahmlet:wght@300&display=swap');
 
@@ -22,7 +27,7 @@ body {
 
 }
 
-.container-fluid {
+.container {
     margin: 0 rem 40 rem;
 }
 .container-spread-all{
@@ -83,7 +88,7 @@ hr {
 .navigation {
     background-color: var(--primary-color);
     color: white;
-    padding: 1rem;
+    padding: 1rem ;
     border-bottom-left-radius: 1rem;
    
 }
@@ -99,11 +104,7 @@ hr {
 .navigation .link-active {
     font-weight: bold;
 }
-@media only screen and (max-width: 600px) {
-    .list-item-inline{
-        /* margin: 0rem 0.2rem; */
-    }
-}
+
 
 /* header */
 .hero {
@@ -133,6 +134,8 @@ hr {
 .section{
     padding:1.5rem;
     padding-bottom: 3.5rem;
+    margin-right:0px !important;
+   
 }
 .section h3 {
     text-align: center;
@@ -141,6 +144,7 @@ hr {
 .section p{
     margin-bottom: 3rem;
     font-size: larger;
+    text-align: center;
 }
 
 .ow{
@@ -169,6 +173,29 @@ background-color: var(--off-white);
 .footer .link a{
     color:white;
     text-decoration: none !important;
+}
+
+@media only screen and (max-width: 600px) {
+    .list-item-inline{
+        margin: 0rem 0.2rem;
+    }
+    .section{
+        overflow-wrap: break-word;
+        
+        width:100% !important;
+    }
+    .hero-image{
+        max-width: 200px !important;
+    }
+    .navigation{
+        padding:1rem 0rem;
+        margin:0px;
+    }
+    .nav-brand{
+        padding-left:
+            0.5rem;
+        }
+    
 }
 
 
